--- a/mainForm/static/css/mainForm.css
+++ b/mainForm/static/css/mainForm.css
@@ -174,6 +174,25 @@ button.button--submitting{
     background-repeat: no-repeat;
 }
 
+.back{
+    color:#f5a541;
+    font-weight: bold;
+    font-size:20px;
+    margin:10px 30px;
+    cursor:pointer;
+}
+.back::before{
+    content:"";
+    margin-left:-17px;
+    margin-top:8px;
+    width:15px;
+    height:15px;
+    position:absolute;
+    background-image: url(../images/arrow-left-orange.png) !important;
+        background-position: 0px 0px !important;
+        background-size: contain;
+}
+
 @-webkit-keyframes anim-1 {
 	50% {
 		opacity: 0;
@@ -259,18 +278,17 @@ thead td{
     background:none !important;
     text-align: center;
 }
-.ui-state-active{
-    color:#f5a541 !important;
-}
-.ui-datepicker-current-day{
-    border-bottom:1px solid #f5a541 !important;
-}
+
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight{
-    color:rgba(245, 165, 65, 0.8);
+    color:#fafafa;
+    background:#f5a541;
     font-weight: bold;
+    border:1px solid #fafafa;
 }
-
+.ui-state-highlight a{
+    color:#fafafa !important;
+}
 .ui-state-hover{
     top:2px !important;
     right:2px !important;
@@ -293,6 +311,12 @@ thead td{
     background-image: url(../images/arrow-right.png) !important;
         background-position: 0px 0px !important;
         background-size: contain;
+}
+.ui-datepicker-today .ui-state-default{
+    color:#f5a541 !important;
+}
+.ui-state-highlight .ui-state-highlight{
+    color:#fafafa !important;
 }
 
 /************************/
@@ -388,7 +412,7 @@ thead td{
     color:inherit;
 }
 .menu a:hover{
-    color:#7e7f81;
+    color:#f5a541;
 }
 
 .menu a::before{
@@ -400,25 +424,6 @@ thead td{
     left:0;
     position:absolute;
     transition: all .3s;
-}
-.menu a::after{
-    content:"";
-    z-index:-1;
-    width:0px;
-    margin-top:-4px;
-    height:38px;
-    background:#f5a541;
-    left:0;
-    position:absolute;
-    opacity: .5;
-        transition: all .3s;
-}
-
-.menu a:hover::after{
-    width:100% !important;
-}
-.menu a:hover::before{
-    right:100% !important;
 }
 /* Generated with Bounce.js. Edit at http://goo.gl/PJ93gs */
 
@@ -503,6 +508,7 @@ thead td{
     margin:25px 0;
 }
 #pigEntry button,
+#pickDate button,
 #login button{
     width:80%;
 }
@@ -518,15 +524,32 @@ thead td{
 /************************/
 /*       Pig Entry      */
 /************************/
+#pickDate{
+    height:370px;
+}
+#pickDate .ui-datepicker{
+    position:relative;
+    margin-top:25px;
+}
+
+#pickDate button{
+    margin-top:10px;
+}
+#dateError{
+    visibility: hidden;
+}
 #pigEntry{
-    height:538px;
+    height: 950px;
 }
-#pigEntry .ui-datepicker{
-    position:absolute;
-    top:0px;
+#pigEntry .input{
+    width:32%;
+    margin:4px 0;
 }
-#pigEntry form{
-    margin-top:290px;
+.centered{
+    transition:all .2s;
+}
+.centered.right{
+    left:100%;
 }
 
 
