--- a/mainForm/templates/mainForm/base.html
+++ b/mainForm/templates/mainForm/base.html
@@ -12,6 +12,7 @@
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="{% static 'js/classie.js' %}"></script>
+		<script src="{% static 'js/jquery-ui.multidatespicker.js' %}"></script>
     </head>
     <body>
        <div class="content">
