--- a/mainForm/static/css/mainForm.css
+++ b/mainForm/static/css/mainForm.css
@@ -34,6 +34,11 @@ body{
     box-shadow: 0 0px 9px 2px rgba(0,0,0,0.08);
 }
 
+h1{
+    color:#f5a541;
+    margin:30px;
+}
+
 @font-face {
   font-family: 'icomoon';
   src:  url('../fonts/icomoon.eot?16m7xw');
@@ -407,8 +412,12 @@ thead td{
     color: #7e7f81;
     text-decoration: none;
     transition: color .2s;
-    padding:5px 10px;
-    margin: 15px 0;
+    padding:15px 10px;
+    border-bottom: 1px solid rgba(126, 127, 129, 0.25);
+    margin: 0 0;
+}
+.menu li:last-child a{
+    border:none;
 }
 .menu a:active{
     color:inherit;
@@ -520,21 +529,32 @@ thead td{
 /*      Submissions     */
 /************************/
 #submissions{
-    height:440px;
-    width:800px;
+    height:auto;
+    background:transparent;
+    width:903px;
+}
+#submissions .centered{
+    z-index:-1;
+    position: fixed;
+    width:903px;
 }
 #submissions .flow{
     background:#f5a541;
     font-weight:bold;
     color: white;
     border-top:3px solid #fafafa;
+    cursor:pointer;
 }
-#submissions .flow td{
-    border-right:1px solid #fafafa;
-    border-left:1px solid #fafafa;
+#submissions .flow img{
+    width:20px;
+    height:20px;
+    transform:rotate(90deg);
+    transition: all .3s;
 }
+
 #submissions table{
-        border-collapse: collapse;
+    border-collapse: collapse;
+    margin:20px 10px;
 }
 #submissions tr{
     border-bottom:none;
@@ -548,13 +568,16 @@ thead td{
 #submissions td:last-child{
     border-right:none;
 }
-#submissions tbody td{
-
-    border:1px solid #f5a541;
-}
 #submissions .collapsable {
   padding: 0;
+  border:none;
 }
+#submissions thead td{
+    border-bottom:none;
+    font-weight: bold;
+}
+
+
 #submissions tr td div {
   max-height: 0;
   padding: 0 10px;
@@ -566,6 +589,20 @@ thead td{
   max-height: 70px;
   padding: 10px 10px;
   transition: max-height 0.6s, padding 0.3s;
+}
+#submissions tr.active td{
+    border:1px solid #f5a541;
+    border-top:none;
+}
+#submissions tr.active img{
+    transform:rotate(-90deg);
+}
+#submissions h1{
+    text-align: center;
+}
+#submissions .flow td{
+    border-right:1px solid #fafafa !important;
+    border-bottom:none;
 }
 
 /************************/
