--- a/mainForm/templates/mainForm/sidebar.html
+++ b/mainForm/templates/mainForm/sidebar.html
@@ -5,7 +5,7 @@
    
         <ul>
             <li> <a href="/logout/">Logout</a> </li>
-            <li> <a href="/submissions/">Dashboard</a> </li>
+            <li> <a href="/submissions/">Submissions</a> </li>
             <li> <a href="/">Pig Entry</a> </li>
         </ul>
     </div>
