--- a/mainForm/templates/mainForm/submissions.html
+++ b/mainForm/templates/mainForm/submissions.html
@@ -1,7 +1,8 @@
 {% extends 'mainForm/base.html' %}
+{% block title %}Submissions{% endblock %}
 {% load static %}
 {% block content %}
-    {% include 'mainForm/sidebar.html' %}
+{% include 'mainForm/sidebar.html' %}
  <div class="centered" id="submissions">
      <div class="centered shadowed"></div>
     <h1> Sow Farm Numbers</h1>
