--- a/mainForm/templates/mainForm/base.html
+++ b/mainForm/templates/mainForm/base.html
@@ -3,7 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Django blog</title>
+         <title>
+			{% block title %}{% endblock %}
+		</title>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         
         <link href="https://fonts.googleapis.com/css?family=Oswald:200" rel="stylesheet">
